--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>simple crystal game</title>
   <link rel="stylesheet" href=assets/css/reset.css>
   <link rel="stylesheet" href=assets/css/style.css>
